--- a/src/DialogLoadGribMeteoFrance.ui
+++ b/src/DialogLoadGribMeteoFrance.ui
@@ -7,17 +7,17 @@
     <x>0</x>
     <y>0</y>
     <width>412</width>
-    <height>161</height>
+    <height>192</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Meteo France GRIB Downloader</string>
   </property>
   <widget class="QDialogButtonBox" name="buttonCancelOK">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>120</y>
+     <y>150</y>
      <width>391</width>
      <height>32</height>
     </rect>
@@ -71,6 +71,37 @@
     </property>
    </widget>
   </widget>
+  <widget class="QProgressBar" name="progressBar">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>110</y>
+     <width>391</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="value">
+    <number>24</number>
+   </property>
+  </widget>
+  <widget class="QLabel" name="downloadingInfo">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>130</y>
+     <width>391</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Not connected.</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections>
@@ -82,11 +113,11 @@
    <hints>
     <hint type="sourcelabel">
      <x>316</x>
-     <y>260</y>
+     <y>181</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
-     <y>274</y>
+     <y>191</y>
     </hint>
    </hints>
   </connection>
@@ -98,7 +129,7 @@
    <hints>
     <hint type="sourcelabel">
      <x>205</x>
-     <y>135</y>
+     <y>165</y>
     </hint>
     <hint type="destinationlabel">
      <x>205</x>
@@ -109,5 +140,6 @@
  </connections>
  <slots>
   <slot>slotBtOK()</slot>
+  <slot>slotBtCancel()</slot>
  </slots>
 </ui>
